--- a/front/index.html
+++ b/front/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login and Registration</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <h2>Register</h2>
