--- a/front/inicio.html
+++ b/front/inicio.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renta de Consolas</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="stiles2.css">
+    <link rel="stylesheet" href="Styles/navbar.css">
+    <link rel="stylesheet" href="Styles/consoles.css">
 </head>
 
 <body>
@@ -23,55 +23,76 @@
             <div class="consolas">
                 <div class="consola">
                     <h2>Consola 1</h2>
-                    <button class="start">Start</button>
-                    <button class="pause">Pause</button>
-                    <button class="restart">Restart</button>
+                    <button class="start">Contar tiempo</button>
+                    <button class="pause">Pausar tiempo</button>
+                    <button class="restart">Reiniciar tiempo</button>
                     <div class="timer">00:00:00</div>
                 </div>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
                 <!-- Repite el mismo HTML para las otras 5 consolas -->
                 <div class="consola">
                     <h2>Consola 2</h2>
-                    <button class="start">Start</button>
-                    <button class="pause">Pause</button>
-                    <button class="restart">Restart</button>
+                    <button class="start">Contar tiempo</button>
+                    <button class="pause">Pausar tiempo</button>
+                    <button class="restart">Reiniciar tiempo</button>
                     <div class="timer">00:00:00</div>
                 </div>
 
                 <div class="consola">
                     <h2>Consola 3</h2>
-                    <button class="start">Start</button>
-                    <button class="pause">Pause</button>
-                    <button class="restart">Restart</button>
+                    <button class="start">Contar tiempoS</button>
+                    <button class="pause">Pausar tiempo</button>
+                    <button class="restart">Reiniciar tiempo</button>
                     <div class="timer">00:00:00</div>
                 </div>
 
                 <div class="consola">
                     <h2>Consola 4</h2>
-                    <button class="start">Start</button>
-                    <button class="pause">Pause</button>
-                    <button class="restart">Restart</button>
+                    <button class="start">Contar tiempo</button>
+                    <button class="pause">Pausar tiempo</button>
+                    <button class="restart">Reiniciar tiempo</button>
                     <div class="timer">00:00:00</div>
                 </div>
 
                 <div class="consola">
                     <h2>Consola 5</h2>
-                    <button class="start">Start</button>
-                    <button class="pause">Pause</button>
-                    <button class="restart">Restart</button>
+                    <button class="start">Contar tiempo</button>
+                    <button class="pause">Pausar tiempo</button>
+                    <button class="restart">Reiniciar tiempo</button>
                     <div class="timer">00:00:00</div>
                 </div>
 
                 <div class="consola">
                     <h2>Consola 6</h2>
-                    <button class="start">Start</button>
-                    <button class="pause">Pause</button>
-                    <button class="restart">Restart</button>
+                    <button class="start">Contar tiempo</button>
+                    <button class="pause">PPausar tiempo</button>
+                    <button class="restart">Reiniciar tiempo</button>
                     <div class="timer">00:00:00</div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="local.js"></script>
+    <table border="1">
+        <caption>Precios de alquiler</caption>
+        <tr>
+            <th>Consola</th>
+            <th>Hora</th>
+            <th>2 Horas</th>
+            <th>Media hora</th>
+        </tr>
+        <tr>
+            <td>Series X</td>
+            <td>$4500</td>
+            <td>$8000</td>
+            <td>$2500</td>
+        </tr>
+        <tr>
+            <td>Series S</td>
+            <td>$3500</td>
+            <td>$6000</td>
+            <td>$2000</td>
+        </tr>
+    </table>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
