--- a/front/index.html
+++ b/front/index.html
@@ -4,21 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login and Registration</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
-    <h2>Register</h2>
-    <form id="registerForm">
-        <input type="text" id="registerUsername" placeholder="Username" required>
-        <input type="password" id="registerPassword" placeholder="Password" required>
-        <button type="submit">Register</button>
-    </form>
-    <h2>Login</h2>
-    <form id="loginForm">
-        <input type="text" id="loginUsername" placeholder="Username" required>
-        <input type="password" id="loginPassword" placeholder="Password" required>
-        <button type="submit">Login</button>
-    </form>
-    <script src="script.js"></script>
+    <div class="container">
+        <input type="checkbox" id="check">
+        <div class="login form">
+            <header>Login</header>
+            <form id="loginForm">
+                <input type="text" id="loginUsername" placeholder="Ingrese su usuario" required>
+                <input type="password" id="loginPassword" placeholder="Ingrese su contraseña" required>
+                <input type="submit" class="button">
+            </form>
+            <div class="signup">
+                <span class="signup">¿No tienes cuenta?
+                    <label for="check">Signup</label>
+                </span>
+            </div>
+        </div>
+        <div class="registration form">
+            <header>Signup</header>
+            <form id="registerForm">
+                <input type="text" placeholder="Ingrese su nombre" required>
+                <input type="text" id="registerUsername" placeholder="Ingrese su usuario" required>
+                <input type="password" id="registerPassword" placeholder="Create a password" required>
+                <input type="submit" class="button">
+            </form>
+            <div class="signup">
+                <span class="signup">Already have an account?
+                    <label for="check">Login</label>
+                </span>
+            </div>
+        </div>
+    </div>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
