--- a/front/index.html
+++ b/front/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <input type="checkbox" id="check">
         <div class="login form">
-            <header>Login</header>
+            <header>Inicio cuenta</header>
             <form id="loginForm">
                 <input type="text" id="loginUsername" placeholder="Ingrese su usuario" required>
                 <input type="password" id="loginPassword" placeholder="Ingrese su contraseña" required>
@@ -18,12 +18,12 @@
             </form>
             <div class="signup">
                 <span class="signup">¿No tienes cuenta?
-                    <label for="check">Signup</label>
+                    <label for="check">Registrarse</label>
                 </span>
             </div>
         </div>
         <div class="registration form">
-            <header>Signup</header>
+            <header>Registro</header>
             <form id="registerForm">
                 <input type="text" placeholder="Ingrese su nombre" required>
                 <input type="text" id="registerUsername" placeholder="Ingrese su usuario" required>
@@ -31,8 +31,8 @@
                 <input type="submit" class="button">
             </form>
             <div class="signup">
-                <span class="signup">Already have an account?
-                    <label for="check">Login</label>
+                <span class="signup">¿Ya tienes una cuenta?
+                    <label for="check">Iniciar sesión</label>
                 </span>
             </div>
         </div>
