--- a/front/inicio.html
+++ b/front/inicio.html
@@ -12,62 +12,62 @@
 <body>
     <nav class="navbar">
         <ul class="nav-list">
+            <img class="picture" src="./Img/punto_gamer.jpeg" />
             <li><a href="#">Inicio</a></li>
             <li><a href="#">Productos</a></li>
-            <li><a href="index.html">Logout</a></li>
+            <li><a href="index.html">Cerrar sesión</a></li>
+            
         </ul>
     </nav>
     <div class="container">
         <h1>Renta de Consolas</h1>
         <div class="consolas">
-            <div class="consolas">
-                <div class="consola">
-                    <h2>Consola 1</h2>
-                    <button class="start">Contar tiempo</button>
-                    <button class="pause">Pausar tiempo</button>
-                    <button class="restart">Reiniciar tiempo</button>
-                    <div class="timer">00:00:00</div>
-                </div>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
-                <!-- Repite el mismo HTML para las otras 5 consolas -->
-                <div class="consola">
-                    <h2>Consola 2</h2>
-                    <button class="start">Contar tiempo</button>
-                    <button class="pause">Pausar tiempo</button>
-                    <button class="restart">Reiniciar tiempo</button>
-                    <div class="timer">00:00:00</div>
-                </div>
+            <div class="consola">
+                <h2>Xbox series X 1</h2>
+                <button class="start">Contar tiempo</button>
+                <button class="pause">Pausar tiempo</button>
+                <button class="restart">Reiniciar tiempo</button>
+                <div class="timer">00:00:00</div>
+            </div>
 
-                <div class="consola">
-                    <h2>Consola 3</h2>
-                    <button class="start">Contar tiempoS</button>
-                    <button class="pause">Pausar tiempo</button>
-                    <button class="restart">Reiniciar tiempo</button>
-                    <div class="timer">00:00:00</div>
-                </div>
+            <div class="consola">
+                <h2>Xbox series X 2</h2>
+                <button class="start">Contar tiempo</button>
+                <button class="pause">Pausar tiempo</button>
+                <button class="restart">Reiniciar tiempo</button>
+                <div class="timer">00:00:00</div>
+            </div>
 
-                <div class="consola">
-                    <h2>Consola 4</h2>
-                    <button class="start">Contar tiempo</button>
-                    <button class="pause">Pausar tiempo</button>
-                    <button class="restart">Reiniciar tiempo</button>
-                    <div class="timer">00:00:00</div>
-                </div>
+            <div class="consola">
+                <h2>Xbox series X 3 </h2>
+                <button class="start">Contar tiempo</button>
+                <button class="pause">Pausar tiempo</button>
+                <button class="restart">Reiniciar tiempo</button>
+                <div class="timer">00:00:00</div>
+            </div>
 
-                <div class="consola">
-                    <h2>Consola 5</h2>
-                    <button class="start">Contar tiempo</button>
-                    <button class="pause">Pausar tiempo</button>
-                    <button class="restart">Reiniciar tiempo</button>
-                    <div class="timer">00:00:00</div>
-                </div>
+            <div class="consola">
+                <h2>Xbox series X 4</h2>
+                <button class="start">Contar tiempo</button>
+                <button class="pause">Pausar tiempo</button>
+                <button class="restart">Reiniciar tiempo</button>
+                <div class="timer">00:00:00</div>
+            </div>
 
-                <div class="consola">
-                    <h2>Consola 6</h2>
-                    <button class="start">Contar tiempo</button>
-                    <button class="pause">PPausar tiempo</button>
-                    <button class="restart">Reiniciar tiempo</button>
-                    <div class="timer">00:00:00</div>
-                </div>
+            <div class="consola">
+                <h2>Xbox series S </h2>
+                <button class="start">Contar tiempo</button>
+                <button class="pause">Pausar tiempo</button>
+                <button class="restart">Reiniciar tiempo</button>
+                <div class="timer">00:00:00</div>
+            </div>
+
+            <div class="consola">
+                <h2>Xbox series S 6</h2>
+                <button class="start">Contar tiempo</button>
+                <button class="pause">PPausar tiempo</button>
+                <button class="restart">Reiniciar tiempo</button>
+                <div class="timer">00:00:00</div>
             </div>
         </div>
     </div>
@@ -92,7 +92,7 @@
             <td>$2000</td>
         </tr>
     </table>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/local.js"></script>
 </body>
 
 </html>
